fixed swup.js stopped working if compile, just use src

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Solve the puzzle | Home</title>
 	<link rel="stylesheet" href="/dest/css/style.css" />
 	<link rel="stylesheet" href="/dest/css/transition.css" />
-	<script type="module" src="/dest/js/swup.js"></script>
+	<script type="module" src="/src/js/swup.js"></script>
 </head>
 
 <body>
