--- a/pages/lv1.html
+++ b/pages/lv1.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="/dest/css/lv1.css" />
 	<link rel="stylesheet" href="/dest/css/transition.css" />
 	<link rel="stylesheet" href="/dest/css/header.css">
-	<script type="module" src="/dest/js/swup.js"></script>
+	<script type="module" src="/src/js/swup.js"></script>
 </head>
 
 <body>
