add proper title for second puzzle

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 			</article>
 			<article class="card" style="--index: 1;">
 			<h2 class="card__title">
-				<a href="/lv2">Second Puzzle Title</a>
+				<a href="/lv2">Remember me</a>
 			</h2>
 			<div class="card__content">
-				Second Puzzle short description
+				Can you remember what you presed?
 			</div>
-			<a href="/lv2">Second Puzzle Title</a>
+			<a href="/lv2">Remember Me</a>
 			</article>
 			<article class="card" style="--index: 2;">
 			<h2 class="card__title">
