change Stop Game -> Skip Game

--- a/pages/lv2.html
+++ b/pages/lv2.html
@@ -24,7 +24,7 @@
 		<div id="time"></div>
 	</div>
 	<div class="game-container"></div>
-	<button id="stop" class="hide">Stop Game</button>
+	<button id="stop" class="hide">Skip Game</button>
 	</div>
 	<div class="controls-container">
 	<p id="result"></p>
