--- a/pages/lv2.html
+++ b/pages/lv2.html
@@ -22,6 +22,7 @@
 	<div class="stats-container">
 		<div id="moves-count"></div>
 		<div id="time"></div>
+		<div id="score"></div>
 	</div>
 	<div class="game-container"></div>
 	<button id="stop" class="hide">Skip Game</button>
