--- a/pages/lv2.html
+++ b/pages/lv2.html
@@ -23,6 +23,7 @@
 		<div id="moves-count"></div>
 		<div id="time"></div>
 		<div id="score"></div>
+		<div id="avgScore"></div>
 	</div>
 	<div class="game-container"></div>
 	<button id="stop" class="hide">Skip Game</button>
