reomve unnessary child span, merged with parent h1

--- a/pages/lv1.html
+++ b/pages/lv1.html
@@ -18,9 +18,7 @@
 	<div header></div>
 	<div class="layout">
 		<main id="swup" class="overview transition-main">
-		<h1>
-			<span data-value="Try me" class="hacktype">Try me</span>
-		</h1>
+		<h1 data-value="Try me" class="hacktype">Try me</h1>
 		<h3>Instructions:</h3>
 		<span>
 			You can start by hovering your mouse below. <br />
@@ -139,11 +137,11 @@
 		</div>
 		</main>
 	</div>
-	<script src="/dest/js/header.js"></script>
-	<script src="/dest/js/hacktype.js"></script>
+	<script defer src="/dest/js/header.js"></script>
+	<script defer src="/dest/js/hacktype.js"></script>
 	<script src="/dest/js/greetinglevel.js"></script>
-	<script src="/dest/js/finishlevel.js"></script>
-	<script src="/dest/js/randomtryme.js"></script>
+	<script defer src="/dest/js/finishlevel.js"></script>
+	<script src="/dest/js/lv1.js"></script>
 </body>
 
 </html>
