--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>Solve the puzzle | Home</title>
 	<link rel="stylesheet" href="/dest/css/style.css" />
 	<link rel="stylesheet" href="/dest/css/transition.css" />
+	<link rel="stylesheet" href="/dest/css/index.css" />
 	<script type="module" src="/src/js/swup.js"></script>
 </head>
 
