--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 			</article>
 			<article class="card" style="--index: 2;">
 			<h2 class="card__title">
-				<a href="/lv3">Third Puzzle Title</a>
+				<a href="/lv3">Find VSA Color</a>
 			</h2>
 			<div class="card__content">
-				Third Puzzle short description
+				Can you remember VSA colors??
 			</div>
-			<a href="/lv3">Third Puzzle Title</a>
+			<a href="/lv3">Find VSA Color</a>
 			</article>
 			<article class="card" style="--index: 3;">
 			<h2 class="card__title">
