--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>Solve the puzzle | Home</title>
-	<link rel="stylesheet" href="/dest/css/style.css" />
-	<link rel="stylesheet" href="/dest/css/transition.css" />
-	<link rel="stylesheet" href="/dest/css/index.css" />
+	<link rel="stylesheet" href="/src/css/style.css" />
+	<link rel="stylesheet" href="/src/css/transition.css" />
+	<link rel="stylesheet" href="/src/css/index.css" />
 	<script type="module" src="/src/js/swup.js"></script>
 </head>
 
@@ -79,7 +79,7 @@
 		</div>
 		</main>
 	</div>
-	<script src="/dest/js/hacktype.js"></script>
+	<script src="/src/js/hacktype.js"></script>
 </body>
 
 </html>
