--- a/pages/lv1.html
+++ b/pages/lv1.html
@@ -5,10 +5,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>Solve the puzzle | Home</title>
-	<link rel="stylesheet" href="/dest/css/style.css">
-	<link rel="stylesheet" href="/dest/css/lv1.css" />
-	<link rel="stylesheet" href="/dest/css/transition.css" />
-	<link rel="stylesheet" href="/dest/css/header.css">
+	<link rel="stylesheet" href="/src/css/style.css">
+	<link rel="stylesheet" href="/src/css/lv1.css" />
+	<link rel="stylesheet" href="/src/css/transition.css" />
+	<link rel="stylesheet" href="/src/css/header.css">
 	<script type="module" src="/src/js/swup.js"></script>
 </head>
 
@@ -137,11 +137,11 @@
 		</div>
 		</main>
 	</div>
-	<script defer src="/dest/js/header.js"></script>
-	<script defer src="/dest/js/hacktype.js"></script>
-	<script src="/dest/js/greetinglevel.js"></script>
-	<script defer src="/dest/js/finishlevel.js"></script>
-	<script src="/dest/js/lv1.js"></script>
+	<script defer src="/src/js/header.js"></script>
+	<script defer src="/src/js/hacktype.js"></script>
+	<script src="/src/js/greetinglevel.js"></script>
+	<script defer src="/src/js/finishlevel.js"></script>
+	<script src="/src/js/lv1.js"></script>
 </body>
 
 </html>
