--- a/pages/lv2.html
+++ b/pages/lv2.html
@@ -9,10 +9,10 @@
 	rel="stylesheet"
 	/>
 	<!-- Stylesheet -->
-	<link rel="stylesheet" href="/dest/css/style.css">
-	<link rel="stylesheet" href="/dest/css/lv2.css" />
-	<link rel="stylesheet" href="/dest/css/transition.css" />
-	<link rel="stylesheet" href="/dest/css/header.css">
+	<link rel="stylesheet" href="/src/css/style.css">
+	<link rel="stylesheet" href="/src/css/lv2.css" />
+	<link rel="stylesheet" href="/src/css/transition.css" />
+	<link rel="stylesheet" href="/src/css/header.css">
 	<script type="module" src="/src/js/swup.js"></script>
 </head>
 <body>
@@ -44,9 +44,9 @@
 	</div>
 	<!-- Script -->
 	<script src="/src/js/lv2.js"></script>
-	<script defer src="/dest/js/header.js"></script>
-	<script defer src="/dest/js/hacktype.js"></script>
-	<script src="/dest/js/greetinglevel.js"></script>
-	<script defer src="/dest/js/finishlevel.js"></script>
+	<script defer src="/src/js/header.js"></script>
+	<script defer src="/src/js/hacktype.js"></script>
+	<script src="/src/js/greetinglevel.js"></script>
+	<script defer src="/src/js/finishlevel.js"></script>
 </body>
 </html>
