--- a/pages/lv3.html
+++ b/pages/lv3.html
@@ -5,10 +5,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>Solve the puzzle | Home</title>
-	<link rel="stylesheet" href="/dest/css/style.css" />
-	<link rel="stylesheet" href="/dest/css/transition.css" />
-	<link rel="stylesheet" href="/dest/css/header.css">
-	<link rel="stylesheet" href="/dest/css/lv3.css" />
+	<link rel="stylesheet" href="/src/css/style.css" />
+	<link rel="stylesheet" href="/src/css/transition.css" />
+	<link rel="stylesheet" href="/src/css/header.css">
+	<link rel="stylesheet" href="/src/css/lv3.css" />
 	<script type="module" src="/src/js/swup.js"></script>
 </head>
 
@@ -30,12 +30,12 @@
 		</div>
 		</main>
 	</div>
-	<script defer src="/dest/js/header.js"></script>
-	<script src="/dest/js/hacktype.js"></script>
-	<script src="/dest/js/greetinglevel.js"></script>
-	<script defer src="/dest/js/finishlevel.js"></script>
-	<script defer src="/dest/js/faillevel.js"></script>
-	<script src="/dest/js/lv3.js"></script>
+	<script defer src="/src/js/header.js"></script>
+	<script src="/src/js/hacktype.js"></script>
+	<script src="/src/js/greetinglevel.js"></script>
+	<script defer src="/src/js/finishlevel.js"></script>
+	<script defer src="/src/js/faillevel.js"></script>
+	<script src="/src/js/lv3.js"></script>
 </body>
 
 </html>
