removed all defer, as it can potaintally made it stopped working sometimes

--- a/pages/lv2.html
+++ b/pages/lv2.html
@@ -44,9 +44,9 @@
 	</div>
 	<!-- Script -->
 	<script src="/src/js/lv2.js"></script>
-	<script defer src="/src/js/header.js"></script>
-	<script defer src="/src/js/hacktype.js"></script>
+	<script src="/src/js/header.js"></script>
+	<script src="/src/js/hacktype.js"></script>
 	<script src="/src/js/greetinglevel.js"></script>
-	<script defer src="/src/js/finishlevel.js"></script>
+	<script src="/src/js/finishlevel.js"></script>
 </body>
 </html>
