--- a/pages/lv1.html
+++ b/pages/lv1.html
@@ -137,10 +137,10 @@
 		</div>
 		</main>
 	</div>
-	<script defer src="/src/js/header.js"></script>
-	<script defer src="/src/js/hacktype.js"></script>
+	<script src="/src/js/header.js"></script>
+	<script src="/src/js/hacktype.js"></script>
 	<script src="/src/js/greetinglevel.js"></script>
-	<script defer src="/src/js/finishlevel.js"></script>
+	<script src="/src/js/finishlevel.js"></script>
 	<script src="/src/js/lv1.js"></script>
 </body>
 
