--- a/pages/lv3.html
+++ b/pages/lv3.html
@@ -30,11 +30,11 @@
 		</div>
 		</main>
 	</div>
-	<script defer src="/src/js/header.js"></script>
+	<script src="/src/js/header.js"></script>
 	<script src="/src/js/hacktype.js"></script>
 	<script src="/src/js/greetinglevel.js"></script>
-	<script defer src="/src/js/finishlevel.js"></script>
-	<script defer src="/src/js/faillevel.js"></script>
+	<script src="/src/js/finishlevel.js"></script>
+	<script src="/src/js/faillevel.js"></script>
 	<script src="/src/js/lv3.js"></script>
 </body>
 
