--- a/pages/lv2.html
+++ b/pages/lv2.html
@@ -14,8 +14,8 @@
 	<link rel="stylesheet" href="/src/css/transition.css" />
 	<link rel="stylesheet" href="/src/css/header.css">
 	<script type="module" src="/src/js/swup.js"></script>
-	<script src="/src/js/greetinglevel.js"></script>
-	<script src="/src/js/lv2.js"></script>
+	<script defer src="/src/js/greetinglevel.js"></script>
+	<script defer src="/src/js/lv2.js"></script>
 </head>
 <body>
 	<div greetdialog page="second"></div>
@@ -40,7 +40,7 @@
 			</div>
 			<div class="controls-container">
 			<p id="result"></p>
-			<button id="start">Start Game</button>
+			<button id="start" onclick="startGame()">Start Game</button>
 			</div>
 		</main>
 	</div>
