names & site title updates

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Solve the puzzle | Home</title>
+	<title>Puzziled Puzzle | Home</title>
 	<link rel="stylesheet" href="/src/css/style.css" />
 	<link rel="stylesheet" href="/src/css/transition.css" />
 	<link rel="stylesheet" href="/src/css/index.css" />
@@ -33,21 +33,21 @@
 			</article>
 			<article class="card" style="--index: 1;">
 			<h2 class="card__title">
-				<a href="/lv2">Remember me</a>
+				<a href="/lv2">Memory Mixer</a>
 			</h2>
 			<div class="card__content">
 				Can you remember what you presed?
 			</div>
-			<a href="/lv2">Remember Me</a>
+			<a href="/lv2">Memory Mixer</a>
 			</article>
 			<article class="card" style="--index: 2;">
 			<h2 class="card__title">
-				<a href="/lv3">Find VSA Color</a>
+				<a href="/lv3">VSA Color Finder</a>
 			</h2>
 			<div class="card__content">
 				Can you remember VSA colors??
 			</div>
-			<a href="/lv3">Find VSA Color</a>
+			<a href="/lv3">VSA Color Finder</a>
 			</article>
 			<article class="card" style="--index: 3;">
 			<h2 class="card__title">
