--- a/pages/lv3.html
+++ b/pages/lv3.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Solve the puzzle | Home</title>
+	<title>Puzziled Puzzle | Level 3 - VSA Color Finder</title>
 	<link rel="stylesheet" href="/src/css/style.css" />
 	<link rel="stylesheet" href="/src/css/transition.css" />
 	<link rel="stylesheet" href="/src/css/header.css">
