--- a/pages/lv1.html
+++ b/pages/lv1.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Solve the puzzle | Home</title>
+	<title>Puzziled Puzzle | Level 1 - Try Me</title>
 	<link rel="stylesheet" href="/src/css/style.css">
 	<link rel="stylesheet" href="/src/css/lv1.css" />
 	<link rel="stylesheet" href="/src/css/transition.css" />
