--- a/pages/lv2.html
+++ b/pages/lv2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Memory Game</title>
+	<title>Puzziled Puzzle | Level 2 - Memory Mixer</title>
 	<!-- Google Fonts -->
 	<link
 	href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
