--- a/404.html
+++ b/404.html
@@ -25,7 +25,7 @@
 <body>
 
 	<div id="notfound">
-		<div class="notfo;und">
+		<div class="notfound">
 			<div class="notfound-404">
 				<h1>404</h1>
 				<h2>Page not found</h2>
