--- a/pages/lv2.html
+++ b/pages/lv2.html
@@ -22,7 +22,7 @@
 	<div header></div>
 	<div class="layout">
 		<main id="swup" class="overview transition-main">
-		<h1 data-value="Remember Me" class="hacktype">Remember Me</h1>
+		<h1 data-value="Memory Mixer" class="hacktype">Memory Mixer</h1>
 		<h3>Instructions:</h3>
 		<span>
 			You can start by pairing cards below<br />
