--- a/pages/lv3.html
+++ b/pages/lv3.html
@@ -9,7 +9,9 @@
 	<link rel="stylesheet" href="/src/css/transition.css" />
 	<link rel="stylesheet" href="/src/css/header.css">
 	<link rel="stylesheet" href="/src/css/lv3.css" />
-	<script type="module" src="/src/js/swup.js"></script>
+	<script defer type="module" src="/src/js/swup.js"></script>
+	<script defer src="/src/js/greetinglevel.js"></script>
+	<script defer src="/src/js/lv3.js"></script>
 </head>
 
 <body>
