--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
 			</article>
 			<article class="card" style="--index: 4;">
 			<h2 class="card__title">
-				<a href="/lv5">Fifth Puzzle Title</a>
+				<a href="/lv5">Why doesn't it show</a>
 			</h2>
 			<div class="card__content">
-				Fifth Puzzle short description
+				Theres some problem with my code, it doesn't show...
 			</div>
-			<a href="/lv5">Fifth Puzzle Title</a>
+			<a href="/lv5">Why doesn't it sho</a>
 			</article>
 			<article class="card" style="--index: 5;">
 			<h2 class="card__title">
