--- a/index.html
+++ b/index.html
@@ -65,16 +65,16 @@
 			<div class="card__content">
 				Theres some problem with my code, it doesn't show...
 			</div>
-			<a href="/lv5">Why doesn't it sho</a>
+			<a href="/lv5">Why doesn't it show</a>
 			</article>
 			<article class="card" style="--index: 5;">
 			<h2 class="card__title">
-				<a href="/lv6">Sixth Puzzle Title</a>
+				<a href="/lv6">Random Text?</a>
 			</h2>
 			<div class="card__content">
-				Sixth Puzzle short description
+				Why doesn't it show
 			</div>
-			<a href="/lv6">Sixth Puzzle Title</a>
+			<a href="/lv6">Random Text?</a>
 			</article>
 		</div>
 		</main>
